students/KhomichVitaliy/task_02/src/k8s/base/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: taskmanager
spec:
  selector:
    app: server
  ports:
  - port: 3001
    targetPort: 3001
  type: ClusterIP
